<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/add"
        android:textColor="@color/secondary"
        android:textSize="54sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_outline_button"
        android:minHeight="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeading">

        <EditText
            android:id="@+id/etHeading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            android:autofillHints="username"
            android:background="@null"
            android:fontFamily="@font/poppins"
            android:gravity="center|start"
            android:hint="@string/type_your_heading_here"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:maxLines="2"
            android:textColor="@color/secondary"
            android:textColorHint="@color/secondaryVariant"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/heading"
        android:textColor="@color/secondary"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/clHeading"
        app:layout_constraintStart_toStartOf="@id/clHeading"
        app:layout_constraintTop_toTopOf="@id/clHeading" />

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_solid_bg"
        android:fontFamily="@font/bebas_neue"
        android:gravity="center_horizontal"
        android:paddingVertical="16dp"
        android:text="@string/save_changes"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clHeading" />
</androidx.constraintlayout.widget.ConstraintLayout>